# rhinoclaw-release

./: .gitignore  CHANGELOG.md  README.md  config.example.json  manifest.yml
rhinoclaw_server/: README.md  pyproject.toml
rhinoclaw_server/src/rhinoclaw/: __init__.py  server.py  websocket_client.py
rhinoclaw_server/src/rhinoclaw/prompts/: assert_general_strategy.py
rhinoclaw_server/src/rhinoclaw/tools/: add_light.py  array_linear.py  array_polar.py  assign_material_to_layer.py  bake_grasshopper.py  boolean_operation.py  capture_viewport.py  chamfer_curves.py  copy_object.py  create_angular_dimension.py  create_block.py  create_group.py  create_layer.py  create_leader.py  create_linear_dimension.py  (+57 more)
rhinoclaw_server/tests/: __init__.py  conftest.py  test_add_light.py  test_boolean_operation.py  test_capture_viewport.py  test_connection.py  test_create_block.py  test_create_group.py  test_create_object.py  test_curve_operations.py  test_dimension_operations.py  test_errors.py  test_explode_block.py  test_export_mesh.py  test_file_operations.py  test_get_document_info.py  test_grasshopper_api.py  test_grasshopper_interactive.py  test_group_operations.py  test_import_mesh.py  test_insert_block.py  test_mesh_from_brep.py  test_modify_object.py  test_object_properties.py  test_render_view.py  test_responses.py  test_run_grasshopper.py  test_set_camera.py  test_set_render_settings.py  test_set_view.py  test_stream_commands.py  test_surface_operations.py  test_transform_operations.py  test_ungroup.py  test_websocket_client.py  test_zoom_extents.py  test_zoom_selected.py
(+7 files in other folders)
